spacing fix for quoted html

--- a/themes/triple-a/less/style.less
+++ b/themes/triple-a/less/style.less
@@ -276,3 +276,7 @@ body {
   color: #252525;
 }
 
+blockquote.UserQuote.blockquote {
+  margin-bottom: 1em !important;
+}
+
